syntax = "proto3";

package exchange.v1;

import "exchange/v1/common.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/quanta-exchange/exchange-platform/contracts/gen/go/exchange/v1;exchangev1";
option java_multiple_files = true;
option java_package = "com.quanta.exchange.contracts.v1";

service TradingCoreService {
  rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse);
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
  rpc SetSymbolMode(SetSymbolModeRequest) returns (SetSymbolModeResponse);
  rpc CancelAll(CancelAllRequest) returns (CancelAllResponse);
}

enum Side {
  SIDE_UNSPECIFIED = 0;
  SIDE_BUY = 1;
  SIDE_SELL = 2;
}

enum OrderType {
  ORDER_TYPE_UNSPECIFIED = 0;
  ORDER_TYPE_LIMIT = 1;
  ORDER_TYPE_MARKET = 2;
}

enum TimeInForce {
  TIME_IN_FORCE_UNSPECIFIED = 0;
  TIME_IN_FORCE_GTC = 1;
  TIME_IN_FORCE_IOC = 2;
  TIME_IN_FORCE_FOK = 3;
}

enum SymbolMode {
  SYMBOL_MODE_UNSPECIFIED = 0;
  SYMBOL_MODE_NORMAL = 1;
  SYMBOL_MODE_CANCEL_ONLY = 2;
  SYMBOL_MODE_SOFT_HALT = 3;
  SYMBOL_MODE_HARD_HALT = 4;
}

message PlaceOrderRequest {
  CommandMetadata meta = 1;
  string order_id = 2;
  Side side = 3;
  OrderType order_type = 4;
  string price = 5;
  string quantity = 6;
  TimeInForce time_in_force = 7;
}

message CancelOrderRequest {
  CommandMetadata meta = 1;
  string order_id = 2;
}

message SetSymbolModeRequest {
  CommandMetadata meta = 1;
  SymbolMode mode = 2;
  string reason = 3;
}

message CancelAllRequest {
  CommandMetadata meta = 1;
  string reason = 2;
}

message PlaceOrderResponse {
  bool accepted = 1;
  string order_id = 2;
  string status = 3;
  string symbol = 4;
  uint64 seq = 5;
  google.protobuf.Timestamp accepted_at = 6;
  string reject_code = 7;
  string correlation_id = 8;
}

message CancelOrderResponse {
  bool accepted = 1;
  string order_id = 2;
  string status = 3;
  string symbol = 4;
  uint64 seq = 5;
  google.protobuf.Timestamp canceled_at = 6;
  string reject_code = 7;
  string correlation_id = 8;
}

message SetSymbolModeResponse {
  bool accepted = 1;
  string symbol = 2;
  uint64 seq = 3;
  google.protobuf.Timestamp acted_at = 4;
  string reason = 5;
}

message CancelAllResponse {
  bool accepted = 1;
  string symbol = 2;
  uint64 seq = 3;
  google.protobuf.Timestamp acted_at = 4;
  string reason = 5;
}

message OrderAccepted {
  EventEnvelope envelope = 1;
  string order_id = 2;
  string user_id = 3;
  Side side = 4;
  OrderType order_type = 5;
  string price = 6;
  string quantity = 7;
}

message OrderRejected {
  EventEnvelope envelope = 1;
  string order_id = 2;
  string user_id = 3;
  string reject_code = 4;
  string detail = 5;
}

message OrderCanceled {
  EventEnvelope envelope = 1;
  string order_id = 2;
  string user_id = 3;
  string remaining_quantity = 4;
}

message CancelRejected {
  EventEnvelope envelope = 1;
  string order_id = 2;
  string user_id = 3;
  string reject_code = 4;
  string detail = 5;
}

message TradeExecuted {
  EventEnvelope envelope = 1;
  string trade_id = 2;
  string maker_order_id = 3;
  string taker_order_id = 4;
  string buyer_user_id = 5;
  string seller_user_id = 6;
  string price = 7;
  string quantity = 8;
  string quote_amount = 9;
  string fee_buyer = 10;
  string fee_seller = 11;
}

message EngineCheckpoint {
  EventEnvelope envelope = 1;
  string state_hash = 2;
}
